canvas support & cleanup

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -53,11 +53,11 @@
     "item.splatcraft.turf_scanner.mode.0": "Top-Down",
     "item.splatcraft.turf_scanner.mode.1": "Multi-Layered",
     "item.splatcraft.color_changer": "Color Transmutator",
-    "item.splatcraft.color_changer.mode.0": "All",
-    "item.splatcraft.color_changer.mode.1": "Whitelist Player Color",
-    "item.splatcraft.color_changer.mode.2": "Blacklist Player Color",
-    "item.splatcraft.color_changer.coords.a": "(%s,%s,%s)",
-    "item.splatcraft.color_changer.coords.b": "(%s,%s,%s) to (%s,%s,%s)",
+    "item.splatcraft.remote.mode.0": "All",
+    "item.splatcraft.remote.mode.1": "Whitelist Player Color",
+    "item.splatcraft.remote.mode.2": "Blacklist Player Color",
+    "item.splatcraft.remote.coords.a": "(%s, %s, %s)",
+    "item.splatcraft.remote.coords.b": "(%s, %s, %s) to (%s, %s, %s)",
 
     "item.splatcraft.ink_cloth_helmet": "Ink Cloth Hat",
     "item.splatcraft.ink_cloth_chestplate": "Ink Cloth Shirt",
@@ -143,6 +143,7 @@
     "item.splatcraft.ink_tank": "Ink Tank",
     "item.splatcraft.ink_tank.noInk": "Low Ink!",
     "item.splatcraft.ink_tank.tooltip.ink": "%s / %s",
+    "item.splatcraft.ink_tank.tooltip.ink.advanced": "Ink: %s / %s",
     "item.splatcraft.classic_ink_tank": "Classic Ink Tank",
     "item.splatcraft.ink_tank_jr": "Ink Tank Jr.",
     "item.splatcraft.ink_tank_jr.tooltip": "Only works with Junior weapons.",
@@ -315,21 +316,21 @@
     "gamerule.splatcraft.inkMobDamage": "Ink Mob Damage",
     "gamerule.splatcraft.inkMobDamage.description": "Allows every Splatcraft weapon to damage players to damage mobs",
 
-    "status.coord_set.a": "Set first position to X: %s Y: %s Z: %s",
-    "status.coord_set.b": "Set second position to X: %s Y: %s Z: %s",
-    "status.remote_mode": "Set Remote Mode to %s",
+    "status.splatcraft.coord_set.a": "Set first position to X: %s Y: %s Z: %s",
+    "status.splatcraft.coord_set.b": "Set second position to X: %s Y: %s Z: %s",
+    "status.splatcraft.remote_mode": "Set Remote Mode to %s",
 
-    "status.scan_turf.out_of_world": "§cCannot check for blocks outside of the world",
-    "status.scan_turf.score": "%s = %s%%",
-    "status.scan_turf.winner": "%s §ewins!",
-    "status.scan_turf.no_ink": "§cNo ink was found on the designated area",
+    "status.splatcraft.scan_turf.out_of_world": "§cCannot check for blocks outside of the world",
+    "status.splatcraft.scan_turf.score": "%s = %s%%",
+    "status.splatcraft.scan_turf.winner": "%s §ewins!",
+    "status.splatcraft.scan_turf.no_ink": "§cNo ink was found on the designated area",
 
-    "status.clear_ink.out_of_world": "§cCannot clear ink outside of the world",
-    "status.clear_ink.no_ink": "No clearable ink was found on the designated area",
-    "status.clear_ink.success": "Successfully cleared %s blocks",
+    "status.splatcraft.clear_ink.out_of_world": "§cCannot clear ink outside of the world",
+    "status.splatcraft.clear_ink.no_ink": "No clearable ink was found on the designated area",
+    "status.splatcraft.clear_ink.success": "Successfully cleared %s blocks",
 
-    "status.change_color.out_of_world": "§cCannot clear ink outside of the world",
-    "status.change_color.success": "Successfully recolored %s blocks to %s",
+    "status.splatcraft.change_color.out_of_world": "§cCannot clear ink outside of the world",
+    "status.splatcraft.change_color.success": "Successfully recolored %s blocks to %s",
 
     "commands.splatcraft.scanturf.success": "Successfully scanned %s blocks of turf",
     "commands.splatcraft.setinkcolor.self.failure": "%s's ink color was already %s",
