squid bumper fixes & improvements

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -300,7 +300,13 @@
     "entity.splatcraft.ink_projectile": "Ink Projectile",
     "entity.splatcraft.ink_squid": "Ink Squid",
     "entity.splatcraft.squid_bumper": "Squid Bumper",
-    "entity.splatcraft.squid_bumper.name": "%s ♥",
+    "entity.splatcraft.squid_bumper.name.last_dealt_damage": "%s ♥",
+    "entity.splatcraft.squid_bumper.name.ink_health": "%s ♥",
+    "entity.splatcraft.squid_bumper.name.ink_health_comparison": "%s/%s ♥",
+    "entity.splatcraft.squid_bumper.name.ink_health_delta": "%s ♥",
+    "entity.splatcraft.squid_bumper.name.ink_health_percentage": "%s ♥",
+    "entity.splatcraft.squid_bumper.name.respawn_time": "%st",
+    "entity.splatcraft.squid_bumper.name.hurt_delay": "%st",
 
     "gamerule.splatcraft.category": "Splatcraft",
     "gamerule.splatcraft.inkDecay": "Ink decay",
