initial chargers + tweaks/fixes
+ chargers... of course... kind of...
+ ink projectiles glow when shot from a player with a splatfest band
+ body rotation now follows head rotation when using a weapon
* you can no longer wave your hand while holding a shooting weapon
* made more effort to fix squid movement up blocks like slabs, not perfect yet
* tweaked ink projectile physics
* tweaked weapon mobility
* fixed ink splash particles spawning in your face and looking ugly
* fixed inked block side culling... kind of

* prettify config output
* made inking happen on the client as well as server to hopefully reduce lag (this may create desync, I'm scared)
* moved initializer class instantiations to Reflection#initialize
* singularised Util classes
* moved display type percentage into lang
+ InkType/InkColor tracked data
* cleaned up InkableEntity class
* cleaned up InkExplosion class

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -266,28 +266,29 @@
     "weaponType.mk2": "Mk II",
     "weaponType.mk3": "Mk III",
 
-    "subtitle.splatcraft.shooter_firing": "Shooter Firing",
-    "subtitle.splatcraft.blaster_firing": "Blaster Firing",
-    "subtitle.splatcraft.blaster_explosion": "Blaster Projectile Explodes",
-    "subtitle.splatcraft.roller_fling": "Roller Flung",
-    "subtitle.splatcraft.roller_roll": "Roller Rolls",
-    "subtitle.splatcraft.charger_charge": "Charger Charging",
-    "subtitle.splatcraft.charger_ready": "Charger Ready",
-    "subtitle.splatcraft.charger_shot": "Charger Fired",
-    "subtitle.splatcraft.dualie_firing": "Dualies Firing",
-    "subtitle.splatcraft.dualie_dodge": "Dualie Dodge",
-    "subtitle.splatcraft.slosher_shot": "Slosher Fired",
-    "subtitle.splatcraft.sub_throw": "Sub Weapon Thrown",
-    "subtitle.splatcraft.sub_detonating": "Sub Weapon Detonating",
-    "subtitle.splatcraft.sub_detonated": "Sub Weapon Detonated",
-    "subtitle.splatcraft.remote_use": "Remote Buzzing",
-    "subtitle.splatcraft.no_ink": "Weapon out of Ink",
-    "subtitle.splatcraft.no_ink_sub": "Sub Weapon out of Ink",
+    "subtitle.splatcraft.shooter_firing": "Shooter firing",
+    "subtitle.splatcraft.blaster_firing": "Blaster firing",
+    "subtitle.splatcraft.blaster_explosion": "Blaster projectile explodes",
+    "subtitle.splatcraft.roller_fling": "Roller flung",
+    "subtitle.splatcraft.roller_roll": "Roller rolls",
+    "subtitle.splatcraft.charger_charge": "Charger charging",
+    "subtitle.splatcraft.charger_ready": "Charger ready",
+    "subtitle.splatcraft.charger_shot": "Charger fired",
+    "subtitle.splatcraft.dualie_firing": "Dualies firing",
+    "subtitle.splatcraft.dualie_dodge": "Dualie dodge",
+    "subtitle.splatcraft.slosher_shot": "Slosher fired",
+    "subtitle.splatcraft.sub_throw": "Sub weapon thrown",
+    "subtitle.splatcraft.sub_detonating": "Sub weapon detonating",
+    "subtitle.splatcraft.sub_detonated": "Sub weapon detonated",
+    "subtitle.splatcraft.remote_use": "Remote buzzes",
+    "subtitle.splatcraft.no_ink": "Weapon out of ink",
+    "subtitle.splatcraft.no_ink_sub": "Sub weapon out of ink",
     "subtitle.splatcraft.squid_transform": "Kid turns into Squid",
     "subtitle.splatcraft.squid_revert": "Squid turns into Kid",
-    "subtitle.splatcraft.ink_submerge": "Squid Submerges",
-    "subtitle.splatcraft.ink_unsubmerge": "Squid Unsubmerges",
-    "subtitle.splatcraft.ink_surface": "Squid Surfaces",
+    "subtitle.splatcraft.entity.ink_squid.submerge": "Squid submerges",
+    "subtitle.splatcraft.entity.ink_squid.unsubmerge": "Squid unsubmerges",
+    "subtitle.splatcraft.block.inked_block.wax_on": "Inked block waxed",
+    "subtitle.splatcraft.block.inked_block.wax_off": "Inked block scraped",
 
     "container.ink_vat": "Inkwell Crafting",
     "container.weapon_workbench": "Weapon Crafting",
@@ -362,7 +363,7 @@
     "entity.splatcraft.squid_bumper.name.ink_health": "%s ♥",
     "entity.splatcraft.squid_bumper.name.ink_health_comparison": "%s/%s ♥",
     "entity.splatcraft.squid_bumper.name.ink_health_delta": "%s ♥",
-    "entity.splatcraft.squid_bumper.name.ink_health_percentage": "%s ♥",
+    "entity.splatcraft.squid_bumper.name.ink_health_percentage": "%s%% ♥",
     "entity.splatcraft.squid_bumper.name.respawn_time": "%st",
     "entity.splatcraft.squid_bumper.name.hurt_delay": "%st",
 
@@ -441,6 +442,8 @@
     "config.splatcraft.category.ink": "Ink",
     "config.splatcraft.category.ink.ink_colored_crosshair_when_squid": "Ink-Colored Crosshair When Squid",
     "config.splatcraft.category.ink.ink_colored_crosshair_when_squid.tooltip": "Enable or disable an ink-colored crosshair when in squid form.",
+    "config.splatcraft.category.ink.ink_colored_charger_indicator": "Ink-Colored Charger Indicator",
+    "config.splatcraft.category.ink.ink_colored_charger_indicator.tooltip": "Enable or disable an ink-colored charger indicator.",
     "config.splatcraft.category.ink.ink_amount_indicator": "Amount Indicator",
     "config.splatcraft.category.ink.ink_amount_indicator.tooltip": "Choose where the ink amount indicator is displayed, if at all.",
     "config.splatcraft.category.ink.ink_amount_indicator_always_visible": "Amount Indicator Always Visible",
