Things. A lot of things.

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -12,16 +12,34 @@
   "config.splatcraft.title": "Splatcraft",
 
   "gamerule.splatcraft.category": "Splatcraft",
-  "gamerule.splatcraft:splatfestBandMustBeHeld": "Splatfest Band Must Be Held",
+  "gamerule.splatcraft:splatfestBandMustBeHeld": "Splatfest band must be held",
   "gamerule.splatcraft:splatfestBandMustBeHeld.description": "Whether or not Splatfest Bands must be held in any hand to affect the player's ink type.",
-  "gamerule.splatcraft:inkwellChangesInkColor": "Inkwell Changes Ink Color",
+  "gamerule.splatcraft:inkwellChangesInkColor": "Inkwell changes ink color",
   "gamerule.splatcraft:inkwellChangesInkColor.description": "Whether or not Inkwells change the ink color of entities on top of one.",
-  "gamerule.splatcraft:hurtInkSquidsInWater": "Hurt Ink Squids In Water",
-  "gamerule.splatcraft:hurtInkSquidsInWater.description": "Whether or not to hurt Ink Squids or players in squid form when in water.",
-  "gamerule.splatcraft:hurtInkSquidsOnEnemyInk": "Hurt Ink Squids On Enemy Ink",
-  "gamerule.splatcraft:hurtInkSquidsOnEnemyInk.description": "Whether or not to hurt Ink Squids or players in squid form when on enemy ink.",
-  "gamerule.splatcraft:inkTankInkRegeneration": "Ink Tank Ink Regeneration",
+  "gamerule.splatcraft:waterDamage": "Deal water damage",
+  "gamerule.splatcraft:waterDamage.description": "Whether or not being in water deals damage",
+  "gamerule.splatcraft:damageOnEnemyInk": "Deal damage while standing on enemy ink",
+  "gamerule.splatcraft:damageOnEnemyInk.description": "Whether or not being located on enemy ink does damage",
+  "gamerule.splatcraft:inkTankInkRegeneration": "Ink tank ink regeneration",
   "gamerule.splatcraft:inkTankInkRegeneration.description": "Whether or not ink tanks ambiently regenerate their ink.",
+  "gamerule.splatcraft:damageOnEnemyInk/scalesToMaxHealth": "Enemy ink damage scales to maximum health",
+  "gamerule.splatcraft:damageOnEnemyInk/scalesToMaxHealth.description": "Whether or not damage from stepping on enemy ink scales with the entity's maximum health. Requires 'Deal damage while standing on enemy ink'",
+  "gamerule.splatcraft:damageOnEnemyInk/onlyInSquidForm": "Deal water damage only in squid form",
+  "gamerule.splatcraft:damageOnEnemyInk/onlyInSquidForm.description": "Whether or not being in human form saves you from being hurt while standing on enemy ink. Requires 'Deal damage while standing on enemy ink'",
+  "gamerule.splatcraft:enemyInkSlowsDown": "Enemy ink slows down",
+  "gamerule.splatcraft:enemyInkSlowsDown.description": "Whether or not being located in enemy ink reduces your movement speed",
+  "gamerule.splatcraft:waterDamage/onlyInSquidForm": "Deal water damage only in squid form",
+  "gamerule.splatcraft:waterDamage/onlyInSquidForm.description": "Whether or not being in human form saves you from water damage. Requires 'Deal water damage'",
+  "gamerule.splatcraft:waterDamage/scalesToMaxHealth": "Water damage scales to maximum health",
+  "gamerule.splatcraft:waterDamage/scalesToMaxHealth.description": "Whether or not damage from stepping on enemy ink scales with the entity's maximum health. Requires 'Deal damage while standing on enemy ink'",
+  "gamerule.splatcraft:waterDamage/instantKill": "Water damage instantly kills",
+  "gamerule.splatcraft:waterDamage/instantKill.description": "Whether or not water damage instantly kills you. Requires 'Deal water damage'",
+  "gamerule.splatcraft:splatoonHealthRegeneration": "Splatoon-accurate health regeneration",
+  "gamerule.splatcraft:splatoonHealthRegeneration.description": "Whether or not use the health regeneration system from Splatoon. Recommended with 'Natural Regeneration' disabled",
+  "gamerule.splatcraft:splatoonHealthRegeneration/scalesToMaxHealth": "Health regeneration scales to maximum health",
+  "gamerule.splatcraft:splatoonHealthRegeneration/scalesToMaxHealth.description": "Whether or not health regeneration scales to the player's maximum health. Requires 'Splatoon-accurate health regeneration'",
+  "gamerule.splatcraft:splatoonHealthRegeneration/onlyInSquidForm": "Health regenerates only in squid form",
+  "gamerule.splatcraft:splatoonHealthRegeneration/onlyInSquidForm.description": "Whether or not regenerate health only if the player is in squid form. Requires 'Splatoon-accurate health regeneration'",
 
   "config.splatcraft.category.client": "Client",
   "config.splatcraft.change_squid_form_key_behavior": "Change Squid Form Key Behavior",
@@ -106,6 +124,8 @@
   "death.attack.splatcraft:inked.item": "%1$s was splatted by %2$s using %3$s",
   "death.attack.splatcraft:out_of_arena": "%1$s fell out of the arena",
   "death.attack.splatcraft:out_of_arena.player": "%1$s fell out of the arena whilst trying to escape %2$s",
+  "death.attack.splatcraft:water": "%1$s dissolved in water",
+  "death.attack.splatcraft:water.player": "%1$s dissolved in water whilst trying to escape %2$s",
 
   "splatcraft:ink_color.minecraft.white": "White",
   "splatcraft:ink_color.minecraft.orange": "Orange",
