--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -16,22 +16,22 @@
   "gamerule.splatcraft:splatfestBandMustBeHeld.description": "Whether or not Splatfest Bands must be held in any hand to affect the player's ink type.",
   "gamerule.splatcraft:inkwellChangesInkColor": "Inkwell changes ink color",
   "gamerule.splatcraft:inkwellChangesInkColor.description": "Whether or not Inkwells change the ink color of entities on top of one.",
-  "gamerule.splatcraft:waterDamage": "Deal water damage",
-  "gamerule.splatcraft:waterDamage.description": "Whether or not being in water deals damage",
-  "gamerule.splatcraft:damageOnEnemyInk": "Deal damage while standing on enemy ink",
-  "gamerule.splatcraft:damageOnEnemyInk.description": "Whether or not being located on enemy ink does damage",
   "gamerule.splatcraft:inkTankInkRegeneration": "Ink tank ink regeneration",
   "gamerule.splatcraft:inkTankInkRegeneration.description": "Whether or not ink tanks ambiently regenerate their ink.",
-  "gamerule.splatcraft:damageOnEnemyInk/scalesToMaxHealth": "Enemy ink damage scales to maximum health",
-  "gamerule.splatcraft:damageOnEnemyInk/scalesToMaxHealth.description": "Whether or not damage from stepping on enemy ink scales with the entity's maximum health. Requires 'Deal damage while standing on enemy ink'",
-  "gamerule.splatcraft:damageOnEnemyInk/onlyInSquidForm": "Deal water damage only in squid form",
-  "gamerule.splatcraft:damageOnEnemyInk/onlyInSquidForm.description": "Whether or not being in human form saves you from being hurt while standing on enemy ink. Requires 'Deal damage while standing on enemy ink'",
   "gamerule.splatcraft:enemyInkSlowsDown": "Enemy ink slows down",
   "gamerule.splatcraft:enemyInkSlowsDown.description": "Whether or not being located in enemy ink reduces your movement speed",
+  "gamerule.splatcraft:damageOnEnemyInk": "Deal damage while standing on enemy ink",
+  "gamerule.splatcraft:damageOnEnemyInk.description": "Whether or not being located on enemy ink does damage",
+  "gamerule.splatcraft:damageOnEnemyInk/scalesToMaxHealth": "Enemy ink damage scales to maximum health",
+  "gamerule.splatcraft:damageOnEnemyInk/scalesToMaxHealth.description": "Whether or not damage from standing on enemy ink scales with the entity's maximum health. Requires 'Deal damage while standing on enemy ink'",
+  "gamerule.splatcraft:damageOnEnemyInk/onlyInSquidForm": "Deal damage from standing in enemy ink only in squid form",
+  "gamerule.splatcraft:damageOnEnemyInk/onlyInSquidForm.description": "Whether or not being in human form saves you from being hurt while standing on enemy ink. Requires 'Deal damage while standing on enemy ink'",
+  "gamerule.splatcraft:waterDamage": "Deal water damage",
+  "gamerule.splatcraft:waterDamage.description": "Whether or not being in water deals damage",
   "gamerule.splatcraft:waterDamage/onlyInSquidForm": "Deal water damage only in squid form",
   "gamerule.splatcraft:waterDamage/onlyInSquidForm.description": "Whether or not being in human form saves you from water damage. Requires 'Deal water damage'",
   "gamerule.splatcraft:waterDamage/scalesToMaxHealth": "Water damage scales to maximum health",
-  "gamerule.splatcraft:waterDamage/scalesToMaxHealth.description": "Whether or not damage from stepping on enemy ink scales with the entity's maximum health. Requires 'Deal damage while standing on enemy ink'",
+  "gamerule.splatcraft:waterDamage/scalesToMaxHealth.description": "Whether or not water damage scales with the entity's maximum health. Requires 'Deal water damage'",
   "gamerule.splatcraft:waterDamage/instantKill": "Water damage instantly kills",
   "gamerule.splatcraft:waterDamage/instantKill.description": "Whether or not water damage instantly kills you. Requires 'Deal water damage'",
   "gamerule.splatcraft:splatoonHealthRegeneration": "Splatoon-accurate health regeneration",
